force-app/src/objects/cpm__Related_Information_Setting__c.object
<CustomObject>
    <fields>
        <fullName>cpm__Child_sObject_Fields__c</fullName>
        <label>Child sObject Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Child_sObject__c</fullName>
        <label>Child sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Filter_Criteria__c</fullName>
        <label>Filter Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Limit__c</fullName>
        <label>Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Order_By_Direction__c</fullName>
        <label>Order By Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asc</fullName>
                </value>
                <value>
                    <fullName>Desc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Order_by__c</fullName>
        <label>Order by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Parent_sObject__c</fullName>
        <label>Parent sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Relationship_Field__c</fullName>
        <label>Relationship Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Related Information Setting</label>
    <nameField>
        <displayFormat>RIS-{0}</displayFormat>
        <label>Related Information Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Information Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>